---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: ????
  Changes:
    - Remove use of script.raise_event.
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2020-05-23
  Bugfixes:
    - Fix error caused by LuaEquipmentGrid.take API change.
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2020-05-02
  Bugfixes:
    - Fix for 0.18.22 custom-input deprecation.
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2020-04-21
  Features:
    - Added hotkey to switch the players gun while driving.
    - Added hotkeys and Shortcuts for Power Armor Modules.
    - Added abitlity to toggle the minimap.
    - Added to toggle displaying groups and subgroups.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2020-03-19
  Features:
    - Added Packing Tape Lite, Chests with items can be mined and placed with items inside of them. (off by default)
    - Added Cursor Carousel, Use [CTRL + MOUSEWHEEL] to select upgrade versions of items in hand.
  Bugfixes:
    - Fix max number error with filter fill requesters.
    - Filter fill requesters no longer has to close the inventory.
  Changes:
    - Removed Auto Stock as it is not needed with character gui update.
    - Removed Auto Trash Fix as it is not needed with character gui update.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: ????
  Bugfixes:
    - Fix bar api changes.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: ??????
  Features:
    - Update to Factorio 0.18.