@@ -8,11 +8,17 @@ PickerInventoryTools=Fast Filter Fill, Fast Requests, Chest Contents Cut/paste, 
 picker-auto-sort-inventory=Automatically Sort Chests
 picker-item-count=Show Item Counts
 picker-copy-between-surfaces=Copy chests between surfaces
+picker-filter-requests=Use Request Filters
+picker-filter-filters=Use Filter Filters
+picker-use-bar-limit=Use Bar Limit Gui
 
 [mod-setting-description]
 picker-auto-sort-inventory=Automatically sort container inventories.
 picker-item-count=Enable or disable displaying the total item count of what is in your hand.
-picker-copy-between-surfaces=Copy and paste chests between surfaces
+picker-copy-between-surfaces=Copy and paste chests between surfaces.
+picker-filter-requests=Enable the filter fill requests gui.
+picker-filter-filters=Enable the filter fill filters gui.
+picker-use-bar-limit=Enable the bar limit gui.
 
 [chest]
 containers=Chest copy/paste can only be used on containers.
